// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`help output check --help 1`] = `
"Usage: htevents check [options]

verify generated code is up to date with contracts

Options:
  -h, --help  display help for command
"
`;

exports[`help output generate --help 1`] = `
"Usage: htevents generate [options]

fetch event contracts and emit typed SDK wrappers and docs

Options:
  -h, --help  display help for command
"
`;

exports[`help output init --help 1`] = `
"Usage: htevents init [options]

create a htevents.config.json for this project

Options:
  --source <slug>         event source slug
  --input <type>          api | git-sync
  --git-sync-path <path>  local git-sync directory (for git-sync)
  --sdk <sdk>             target SDK (browser-ts, node-ts, python, ruby, php,
                          csharp, go, swift, android, kotlin, java,
                          react-native)
  --output <path>         path for generated code
  --force                 overwrite an existing config file
  -h, --help              display help for command
"
`;

exports[`help output root help lists all commands and global options 1`] = `
"Usage: htevents [options] [command]

Codegen CLI for Hightouch Events

Options:
  -V, --version        output the version number
  -c, --config <path>  path to the config file (default:
                       "./htevents.config.json")
  --token <token>      Hightouch workspace API token (overrides
                       HIGHTOUCH_API_TOKEN)
  --debug              print stack traces for errors
  -h, --help           display help for command

Commands:
  init [options]       create a htevents.config.json for this project
  generate             fetch event contracts and emit typed SDK wrappers and
                       docs
  check                verify generated code is up to date with contracts
  help [command]       display help for command
"
`;
